[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/Health.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/damage.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Shotgun.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Menu Items.gd" type="Script" id=5]
[ext_resource path="res://icon.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Load_Minigame.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 30 )

[sub_resource type="Animation" id=2]
resource_name = "normal"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:shape:extents")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 15, 30 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:shape")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "roll"
tracks/0/type = "value"
tracks/0/path = NodePath(".:shape")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.05, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ SubResource( 1 ), SubResource( 1 ), SubResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 10 ), Vector2( 0, 10 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:shape:extents")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.05, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 25, 15 ), Vector2( 25, 15 ), Vector2( 15, 30 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "close"
tracks/0/type = "value"
tracks/0/path = NodePath("Menu:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-005, 1e-005 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Menu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "closed"
tracks/0/type = "value"
tracks/0/path = NodePath("Menu:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-005, 1e-005 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Menu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "open"
length = 99999.0
tracks/0/type = "value"
tracks/0/path = NodePath("Menu:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-005, 1e-005 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Menu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( -0.1, 0 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "opened"
tracks/0/type = "value"
tracks/0/path = NodePath("Menu:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Menu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Load"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Line2D3:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 3.95837, -61.2451 ), Vector2( 100.934, -61.2451 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "load_minigame"
}, {
"args": [  ],
"method": "unload_minigame"
} ]
}

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )

[node name="Health" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Colision" type="AnimationPlayer" parent="CollisionShape2D"]
anims/normal = SubResource( 2 )
anims/roll = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -135 )
current = true
drag_margin_h_enabled = false
drag_margin_v_enabled = false

[node name="Groud_Middle" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 31 )

[node name="Ground_Left" type="RayCast2D" parent="."]
position = Vector2( -15, 0 )
enabled = true
cast_to = Vector2( 0, 31 )

[node name="Ground_Right" type="RayCast2D" parent="."]
position = Vector2( 15, 0 )
enabled = true
cast_to = Vector2( 0, 31 )

[node name="Ledge_Grab_R" type="RayCast2D" parent="."]
position = Vector2( 0, -30 )
enabled = true
cast_to = Vector2( 20, 0 )

[node name="Ledge_Grab_L" type="RayCast2D" parent="."]
position = Vector2( 0, -30 )
enabled = true
cast_to = Vector2( -20, 0 )

[node name="Weapons" type="Node2D" parent="."]

[node name="Sword" type="RayCast2D" parent="Weapons"]
cast_to = Vector2( 60, 0 )
script = ExtResource( 3 )

[node name="Gun" type="Node2D" parent="Weapons"]
script = ExtResource( 4 )
weapon = "res://assets/Bullet.tscn"
spreed = 1
timer = 0.2
damage = 3

[node name="Shotgun" type="Node2D" parent="Weapons"]
script = ExtResource( 4 )
weapon = "res://assets/Bullet.tscn"
bullet_n = 15
spreed = 20

[node name="Bomb" type="Node2D" parent="Weapons"]
script = ExtResource( 4 )
weapon = "res://assets/Bullet.tscn"
speed = 400
spreed = 20
timer = 0.5
gravity = 25
damage = 10
curve = -600

[node name="Menu Items" type="CanvasLayer" parent="."]
editor/display_folded = true
script = ExtResource( 5 )

[node name="Menu" type="Node2D" parent="Menu Items"]
position = Vector2( 512, 420 )

[node name="icon_down" type="Sprite" parent="Menu Items/Menu"]
position = Vector2( 0, 120 )
texture = ExtResource( 6 )

[node name="icon_up" type="Sprite" parent="Menu Items/Menu"]
position = Vector2( 0, -120 )
texture = ExtResource( 6 )

[node name="icon_right" type="Sprite" parent="Menu Items/Menu"]
position = Vector2( 120, 0 )
texture = ExtResource( 6 )

[node name="icon_left" type="Sprite" parent="Menu Items/Menu"]
position = Vector2( -120, 0 )
texture = ExtResource( 6 )

[node name="Menu Anim" type="AnimationPlayer" parent="Menu Items"]
anims/close = SubResource( 6 )
anims/closed = SubResource( 7 )
anims/open = SubResource( 5 )
anims/opened = SubResource( 8 )
next/close = "closed"
next/open = "opened"

[node name="Load_Minigame" type="Node2D" parent="."]
visible = false
script = ExtResource( 7 )

[node name="Line2D" type="Line2D" parent="Load_Minigame"]
position = Vector2( 2.64075, -51.4948 )
points = PoolVector2Array( 0, 0, 100, 0 )
width = 5.0
default_color = Color( 0, 0, 0, 0.501961 )
texture_mode = 0

[node name="Line2D2" type="Line2D" parent="Load_Minigame"]
position = Vector2( 51.392, -56.7652 )
points = PoolVector2Array( 0, 0, 0, 10 )
default_color = Color( 1, 1, 1, 0.501961 )
texture_mode = 0

[node name="Line2D3" type="Line2D" parent="Load_Minigame"]
position = Vector2( 42.7485, -61.2451 )
points = PoolVector2Array( 0, 0, 0, 20 )
width = 3.0
default_color = Color( 1, 1, 1, 1 )
texture_mode = 0

[node name="Minigame" type="AnimationPlayer" parent="Load_Minigame"]
autoplay = "Load"
anims/Load = SubResource( 9 )

